cabal-version:      3.0
name:               hs-starter
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
build-type:         Simple

common warnings
  ghc-options: -Wall
  default-language: GHC2021

library
  import: warnings
  hs-source-dirs: src
  exposed-modules:
      Lib
  build-depends:
      base >=4.18 && <5
      , text

executable hs-starter
  import: warnings
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
      base >=4.18 && <5,
      hs-starter

test-suite hs-starter-test
  import: warnings
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
      base >=4.18 && <5,
      hs-starter
